syntax = "proto3";

option csharp_namespace = "Discount.Grpc.Protos";

service DiscountProtoService {
    rpc GetDiscount (GetDiscountRequest) returns (CouponDTO);
    rpc CreateDiscount(CreateDiscountRequest) returns (CouponDTO);
    rpc UpdateDiscount(UpdateDiscountRequest) returns (UpdateDiscountResponse);
    rpc DeleteDiscount(DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

message CouponDTO {
	string id = 1;
	string productName = 2;
	string description = 3;
	int32 amount = 4;
}

message GetDiscountRequest {
	string productName = 1;
}

message CreateDiscountRequest {
	CouponDTO coupon = 1;
}

message UpdateDiscountRequest {
	CouponDTO coupon = 1;
}

message DeleteDiscountRequest {
	string id = 1;
}

message UpdateDiscountResponse {
    bool success = 1;
}

message DeleteDiscountResponse {
	bool success = 1;
}

